--- a/colab-env.yml
+++ b/colab-env.yml
@@ -4,9 +4,8 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - python=3.6.6
     - pip:
         - ballpark==1.4.0
         - visdom==0.1.8.5
-        - peterpy
+        - git+https://github.com/asdfgh5889/peterpy.git
         - torchvision==0.2.1
