--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
-xmltodict
+imageio==2.3.0
+ipdb==0.11
+ipython==6.3.1
+ipython_genutils==0.2.0
+matplotlib==2.2.2
+numpy==1.14.3
+opencv==3.4.1
+pandas
+parse==1.8.2
+python-dateutil==2.7.2
+scikit-image==0.13.1
+scikit-learn==0.19.1
+scipy==1.0.1
+setuptools==39.1.0
+tqdm==4.23.1
+xmltodict==0.11.0
+pytorch==1.0.0
+torchvision==0.2.1
 ballpark
 visdom
 git+https://github.com/asdfgh5889/peterpy.git
