--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ ipython==6.3.1
 ipython_genutils==0.2.0
 matplotlib==2.2.2
 numpy==1.14.3
-opencv==3.4.1
+opencv-python
 pandas
 parse==1.8.2
 python-dateutil==2.7.2
