--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ ipython==6.3.1
 ipython_genutils==0.2.0
 matplotlib==2.2.2
 numpy==1.14.3
-opencv-python
-pandas
+opencv-python==3.4.1
+pandas==1.2.2
 parse==1.8.2
 python-dateutil==2.7.2
 scikit-image==0.13.1
@@ -14,8 +14,8 @@ scipy==1.0.1
 setuptools==39.1.0
 tqdm==4.23.1
 xmltodict==0.11.0
-torch
+torch==1.7.0
 torchvision==0.2.1
-ballpark
-visdom
+ballpark==1.4.0
+visdom==0.1.8.9
 git+https://github.com/asdfgh5889/peterpy.git
